@@ -6,7 +6,7 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>1.3.0</version>
+        <version>2.1.5</version>
     </parent>
     <artifactId>missing-image-delivery.orders.api.ch.gov.uk</artifactId>
     <version>unversioned</version>
@@ -14,32 +14,39 @@
     <description>CH API handling CRUD operations on Missing Image Delivery Service</description>
 
     <properties>
-        <api-helper-java.version>1.1.0-rc1</api-helper-java.version>
-        <api-sdk-java.version>4.2.36</api-sdk-java.version>
-        <api-sdk-manager-java-library.version>1.0.2</api-sdk-manager-java-library.version>
-        <api-security-java.version>0.3.5</api-security-java.version>
-        <commons.lang.version>2.6</commons.lang.version>
-        <guava.version>28.1-jre</guava.version>
-        <gson.version>2.8.0</gson.version>
-        <hamcrest-all-version>1.3</hamcrest-all-version>
-        <jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
-        <java.version>1.8</java.version>
-        <hamcrest-all-version>1.3</hamcrest-all-version>
-        <mockito-junit-jupiter-version>2.18.0</mockito-junit-jupiter-version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-        <powermock.version>2.0.6</powermock.version>
-        <spring-boot-dependencies.version>2.5.5</spring-boot-dependencies.version>
-        <spring-boot-maven-plugin.version>2.5.5</spring-boot-maven-plugin.version>
-        <spring-cloud-contract-wiremock-version>2.2.2.RELEASE</spring-cloud-contract-wiremock-version>
+        <java.version>21</java.version>
+        <spring-boot-dependencies.version>3.2.5</spring-boot-dependencies.version>
+
+        <!--- CH -->
+        <api-helper-java.version>3.0.1</api-helper-java.version>
+        <api-sdk-java.version>4.3.40</api-sdk-java.version>
+        <api-sdk-manager-java-library.version>3.0.5</api-sdk-manager-java-library.version>
+        <api-security-java.version>2.0.4</api-security-java.version>
+        <structured-logging.version>3.0.7</structured-logging.version>
+        <commons.lang.version>3.14.0</commons.lang.version>
+        <guava.version>33.2.0-jre</guava.version>
+        <gson.version>2.10.1</gson.version>
+        <system-rules.version>1.19.0</system-rules.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <snakeyaml.version>2.2</snakeyaml.version>
+        <powermock.version>2.0.9</powermock.version>
+        <hamcrest.version>2.2</hamcrest.version>
+        <spring-cloud-contract-wiremock.version>4.1.2</spring-cloud-contract-wiremock.version>
+        <mockito-junit-jupiter.version>5.11.0</mockito-junit-jupiter.version>
+        <flapdoodle-embed-mongo.version>4.13.0</flapdoodle-embed-mongo.version>
         <start-class>uk.gov.companieshouse.missingimagedelivery.orders.api.MissingImageDeliveryApiApplication
         </start-class>
-        <structured-logging.version>1.9.12</structured-logging.version>
-        <snakeyaml.version>1.29</snakeyaml.version>
-        <system-rules-version>1.17.2</system-rules-version>
+        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <!-- Docker property -->
-        <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
+        <jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
+        <test-containers.version>1.19.7</test-containers.version>
+        <dependency-check-plugin.version>9.1.0</dependency-check-plugin.version>
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
     </properties>
 
     <dependencyManagement>
@@ -67,6 +74,13 @@
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>api-sdk-manager-java-library</artifactId>
             <version>${api-sdk-manager-java-library.version}</version>
+            <exclusions>
+                <!--excluded to remove vulnerability-->
+                <exclusion>
+                    <groupId>commons-collections</groupId>
+                    <artifactId>commons-collections</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
@@ -106,8 +120,8 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
             <version>${commons.lang.version}</version>
         </dependency>
         <dependency>
@@ -128,13 +142,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito-junit-jupiter-version}</version>
+            <version>${mockito-junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest-all-version}</version>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -158,18 +172,42 @@
         <dependency>
             <groupId>com.github.stefanbirkner</groupId>
             <artifactId>system-rules</artifactId>
-            <version>${system-rules-version}</version>
+            <version>${system-rules.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-contract-wiremock</artifactId>
-            <version>${spring-cloud-contract-wiremock-version}</version>
+            <version>${spring-cloud-contract-wiremock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-bom</artifactId>
+            <version>${test-containers.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.org.webcompere</groupId>
+            <artifactId>system-stubs-core</artifactId>
+            <version>2.1.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.org.webcompere</groupId>
+            <artifactId>system-stubs-jupiter</artifactId>
+            <version>2.1.6</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -180,7 +218,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot-maven-plugin.version}</version>
+                <version>${spring-boot-dependencies.version}</version>
                 <configuration>
                     <mainClass>${start-class}</mainClass>
                     <layout>ZIP</layout>
@@ -198,6 +236,34 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>pre-integration-test</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>prepare-agent-integration</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+                            <destFile>target/jacoco-it.exec</destFile>
+                            <propertyName>failsafeArgLine</propertyName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>post-integration-test</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+                            <dataFile>target/jacoco-it.exec</dataFile>
+                            <!-- Sets the output directory for the code coverage report. -->
+                            <!--suppress UnresolvedMavenProperty -->
+                            <outputDirectory>${sonar.jacoco.reports}/jacoco-it</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -219,6 +285,7 @@
                         </path>
                         <!-- other annotation processors -->
                     </annotationProcessorPaths>
+                    <parameters>true</parameters>
                 </configuration>
             </plugin>
             <plugin>
@@ -239,10 +306,40 @@
                             </path>
                         </paths>
                     </extraDirectories>
+                    <from>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
+                    </from>
+                    <to>
+                        //Once the pipeline is moved to shared services need to update this to image reference from shared services
+                        <image>169942020521.dkr.ecr.eu-west-1.amazonaws.com/local/missing-image-delivery.orders.api.ch.gov.uk:latest</image>
+                    </to>
                     <container>
                         <expandClasspathDependencies>true</expandClasspathDependencies>
+                        <jvmFlags>
+                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+                        </jvmFlags>
                     </container>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>${dependency-check-plugin.version}</version>
+                <configuration>
+                    <formats>
+                        <format>html</format>
+                    </formats>
+                    <suppressionFiles>
+                        <suppressionFile>suppress.xml</suppressionFile>
+                    </suppressionFiles>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
